# numba-wasm-example

./: .gitignore  README.md  example_module-0.1.0-py3-none-any.whl  example_module.ll  example_module.wasm  index.html  main.py  nrt.wasm  numba_wasm-0.1.0-py3-none-any.whl  out.ll  out.wasm  util.py
.github/workflows/: workflow.yml
example_module/: build_numba_functions.py  pyproject.toml
example_module/example_module/: __init__.py  example.py
numba_wasm/: pyproject.toml
numba_wasm/numba_wasm/: __init__.py  example_module.py  util.py  wasm_compilation_util.py
