[tool.poetry]
name = "example-module"
version = "0.1.0"
description = "Example pyodide-compatible module with numba compiled functions"
authors = ["lincoln-lm <73306575+Lincoln-LM@users.noreply.github.com>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [{include = "example_module"}]

[tool.poetry.dependencies]
python = ">= 3.9"
numpy = "^1.23.5"
numba_wasm = { path = "../numba_wasm/", develop = false }

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.3"
black = "^23.3.0"
numba = "^0.56.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
