[tool.poetry]
name = "numba-wasm"
version = "0.1.0"
description = "Module to be imported in pyodide for easier numba-wasm access"
authors = ["lincoln-lm <73306575+Lincoln-LM@users.noreply.github.com>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [{include = "numba_wasm"}]

[tool.poetry.dependencies]
python = ">= 3.9"
numpy = "^1.24.2"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.3"
black = "^23.3.0"
numba = "^0.56.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
