[tool.poetry]
name = "numba-wasm"
version = "0.1.0"
description = "Helper module for building and calling numba-compiled WASM functions from python"
authors = ["lincoln-lm <73306575+Lincoln-LM@users.noreply.github.com>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [{include = "numba_wasm"}]

[tool.poetry.dependencies]
python = ">= 3.9"
numpy = "^1.23.5"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.3"
black = "^23.3.0"
numba = "^0.57.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
